<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kati.umpirebuddy2.MainActivity">

    <TextView
        android:text="@string/strike_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/strike_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/ball_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ball_label"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:id="@+id/ballCount"
        android:text="@string/ballCount"
        android:layout_alignBaseline="@+id/ball_label"
        android:layout_alignBottom="@+id/ball_label"
        android:layout_toEndOf="@+id/strike_label"
        android:layout_marginStart="16dp" />

    <TextView
        android:text="@string/strikeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/strikeCount"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/ballCount" />

    <Button
        android:text="@string/btnStrike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStrike"
        android:layout_below="@+id/ball_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:layout_alignParentEnd="true"
        android:textSize="50sp"
        android:backgroundTint="@color/colorAccent" />

    <Button
        android:text="@string/btnBall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBall"
        android:layout_below="@+id/btnStrike"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_alignParentEnd="true"
        android:textSize="50sp"
        android:backgroundTint="@color/colorAccent" />

    <TextView
        android:text="@string/out_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBall"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp"
        android:id="@+id/out_label"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/outCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/outCount"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/out_label"
        android:layout_alignBottom="@+id/out_label"
        android:layout_toEndOf="@+id/ballCount" />

</RelativeLayout>
