<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kati.umpirebuddy2.About">

    <TextView
        android:text="@string/aboutAct_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutAct_name"
        android:layout_marginTop="11dp"
        android:id="@+id/aboutAct_class"
        android:textSize="30sp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/aboutAct_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutAct_class"
        android:layout_marginTop="11dp"
        android:id="@+id/aboutAct_school"
        android:textSize="30sp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/aboutAct_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:id="@+id/aboutAct_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/aboutAct_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/aboutAct_date"
        android:textSize="30sp"
        android:layout_below="@+id/aboutAct_school"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
